--- a/style.scss
+++ b/style.scss
@@ -47,7 +47,8 @@ main {
   box-shadow: 4px 4px 10px -4px #ccc;
 
   .image {
-    background: url(meysam-jarahkar-LI7jB1925j0-unsplash.jpg);
+    // TODO img profile 
+    background: url("./Profile.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
